# REDRES

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bash_build_script.sh  main.cpp
app/: CMakeLists.txt  main.cpp
assets/: default_settings.json  settings.json
assets/shaders/: Makefile  atom_shader.frag  atom_shader.frag.spv  atom_shader.vert  atom_shader.vert.spv  atom_shader_iso.frag  atom_shader_iso.frag.spv  bond_shader.frag  bond_shader.frag.spv  bond_shader.vert  bond_shader.vert.spv  bond_shader_iso.frag  bond_shader_iso.frag.spv  culling.comp  culling.comp.spv  deferred_shader.frag  deferred_shader.frag.spv  deferred_shader.vert  deferred_shader.vert.spv
assets/shaders/shader_utils/: buffers.vert  constants.vert  structs.vert  utils.frag
docs/: README.md  build.md
docs/user_manual/: 1introduction.md  2installation.md  3build.md  5databases.md  6windows.md  7customization.md
docs/user_manual_html_site/: 1introduction.html  2installation.html  3build.html  404.html  4usage.html  5databases.html  6windows.html  7customization.html
docs/user_manual_html_site/overrides/: base.html
docs/user_manual_markdown/: 4usage.md  5databases.md  7customization.md
lib/include/: buffer.hpp  camera.hpp  descriptors.hpp  engine.hpp  gui.hpp  mesh.hpp  pipeline.hpp  scene.hpp  swapchain.hpp  utils.hpp  visualization_data.hpp  visualization_data_loader.hpp  vulkan_types.hpp  window.hpp
lib/src/: buffer.cpp  camera.cpp  descriptors.cpp  engine.cpp  gui.cpp  main.cpp  mesh.cpp  pipeline.cpp  scene.cpp  swapchain.cpp  utils.cpp  visualization_data.cpp  visualization_data_loader.cpp  window.cpp
misc/: TODO  commit-changelog  cool_bugs_for_presentation  gpu_driven_rcc.desktop  milestones.md
render_engine/: CMakeLists.txt
render_engine/include/: buffer.hpp  descriptors.hpp  engine.hpp  gui.hpp  mesh.hpp  pipeline.hpp  scene.hpp  swapchain.hpp  visualization_data.hpp  vulkan_include.hpp  vulkan_types.hpp  window.hpp
render_engine/src/: camera.cpp  descriptors.cpp  engine.cpp  mesh.cpp  pipeline.cpp  scene.cpp  swapchain.cpp  utils.cpp  window.cpp
shaders/: CMakeLists.txt  atom_shader.frag  atom_shader.vert  atom_shader_iso.frag  bond_shader.frag  bond_shader.vert  bond_shader_iso.frag  culling.comp  shader_include.inc
